basicswap/static/css/style.css
.padded_row td
{
  padding-top:1.5em;
}

.bold
{
  font-weight:bold;
}

.monospace
{
  font-family:monospace;
}

.floatright
{
  position: fixed;
  top:1.25rem;
  right:1.25rem;
  z-index: 9999;
}

.error_msg
{
}

#hide {
    -moz-animation: cssAnimation 0s ease-in 15s forwards;
    /* Firefox */
    -webkit-animation: cssAnimation 0s ease-in 15s forwards;
    /* Safari and Chrome */
    -o-animation: cssAnimation 0s ease-in 15s forwards;
    /* Opera */
    animation: cssAnimation 0s ease-in 15s forwards;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
}
@keyframes cssAnimation {
    to {
        width:0;
        height:0;
        overflow:hidden;
    }
}
@-webkit-keyframes cssAnimation {
    to {
        width:0;
        height:0;
        visibility:hidden;
    }
}

.custom-select .select {
    appearance: none;
    background-image: url('/static/images/other/coin.png');
    background-position: 10px center;
    background-repeat: no-repeat;
    position: relative;
  }

.custom-select select::-webkit-scrollbar {
  width: 0;
}

.custom-select .select option {
  padding-left: 0;
  text-indent: 0;
  background-repeat: no-repeat;
  background-position: 0 50%;
}

.custom-select .select option.no-space {
  padding-left: 0;
}

.custom-select .select option[data-image] {
  background-image: url('');
}

.custom-select .select-icon {
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translateY(-50%);
}

.custom-select .select-image {
  display: none;
  margin-top: 10px;
}

.custom-select .select:focus + .select-dropdown .select-image {
  display: block;
}

.blurred {
    filter: blur(4px);
    pointer-events: none;
    user-select: none;
}

.error-overlay.non-blurred {
    filter: none;
    pointer-events: auto;
    user-select: auto;
}

/* Disable opacity on disabled form elements in Chrome */
@media screen and (-webkit-min-device-pixel-ratio:0) {
  select:disabled,
  input:disabled,
  textarea:disabled {
    opacity: 1 !important;
  }
}

.error {
  border: 1px solid red !important;
}

.active-container {
  position: relative;
  border-radius: 10px;
}

.active-container::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid rgb(77, 132, 240);
  border-radius: inherit;
  pointer-events: none;
}

.center-spin {
  display: flex;
  justify-content: center;
  align-items: center;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.hover-container:hover #coin_to_button, .hover-container:hover #coin_to {
  border-color: #3b82f6;
}
.hover-container:hover #coin_from_button, .hover-container:hover #coin_from {
  border-color: #3b82f6;
}

#coin_to_button, #coin_from_button {
  background-repeat: no-repeat;
  background-position: center;
  background-size: 20px 20px;
}

.input-like-container {
  max-width: 100%;
  background-color: #ffffff;
  width: 360px;
  padding: 1rem;
  color: #374151;
  border-radius: 0.375rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  outline: none;
  word-wrap: break-word;
  height: 90px;
  color: #374151;
  border-radius: 0.375rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  outline: none;
  word-break: break-all;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.input-like-container.copying {
  width: inherit;
}

.qrcode {
  position: relative;
  display: inline-block;
  padding: 10px;
  overflow: hidden;
  position: relative;
}

.qrcode-border {
  border: 2px solid;
  border-color: rgba(59, 130, 246, var(--tw-border-opacity));
  border-radius: 20px;
}

.qrcode img {
  width: 100%;
  height: auto;
  border-radius: 15px;
}

#showQR {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height:25px;
}


select.select-disabled {
opacity: 0.40 !important;
}


.disabled-input-enabled {
    opacity: 0.40 !important;
}
select.disabled-select-enabled {
    opacity: 0.40 !important;
}


  .custom-select .select {
   appearance: none;
   background-position: 10px center;
   background-repeat: no-repeat;
   position: relative;
  }

  .custom-select select::-webkit-scrollbar {
   width: 0;
  }

  .custom-select .select option {
   padding-left: 0;
   text-indent: 0;
   background-repeat: no-repeat;
   background-position: 0 50%;
  }

  .custom-select .select option.no-space {
   padding-left: 0;
  }

  .custom-select .select option[data-image] {
   background-image: url('');
  }

  .custom-select .select-icon {
   position: absolute;
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
  }

  .custom-select .select-image {
   display: none;
   margin-top: 10px;
  }

  .custom-select .select:focus+.select-dropdown .select-image {
   display: block;
  }

